# wizarding-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-build.yml  rust-tests.yml
src/: ast.rs  codegen.rs  lexer.rs  main.rs  parser.rs
